grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana1
  labels:
    app: grafana1
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32000  # Optional: specify a port in the range 30000-32767
  selector:
    app: grafana1
